# Trobo

./: .gitignore  robot.launch  run_tests.sh  trobo.workspace
.codelite/: trobo.tags
backup/install/include/: SingleResultSrvClient.h
install/: .rosinstall  setup.sh
install/include/actionlib_msgs/: GoalStatus.h
install/include/custom_msgs/: Action.h  ActionSrv.h  ActionSrvRequest.h  ActionSrvResponse.h  Box.h  ImagesAndBoxes.h
install/include/diagnostic_msgs/: DiagnosticStatus.h  KeyValue.h
install/include/geometry_msgs/: Accel.h  AccelWithCovarianceStamped.h  Inertia.h  InertiaStamped.h  Point.h  Point32.h  PointStamped.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovarianceStamped.h  Transform.h  TwistStamped.h  TwistWithCovariance.h
install/include/nav_msgs/: GetMapAction.h  GetMapGoal.h  GetMapRequest.h  GetPlanResponse.h  GridCells.h  MapMetaData.h  Odometry.h  Path.h  SetMapRequest.h  SetMapResponse.h
install/include/sensor_msgs/: ChannelFloat32.h  CompressedImage.h  FluidPressure.h  Illuminance.h  Imu.h  JointState.h  JoyFeedbackArray.h  LaserScan.h  MagneticField.h  NavSatFix.h  NavSatStatus.h  PointCloud.h  PointField.h  RegionOfInterest.h  RelativeHumidity.h  SetCameraInfoResponse.h  (+1 more)
src/action_dispatcher/: CMakeLists.txt
src/images_displayer/: CMakeLists.txt
src/main_processor/: CMakeLists.txt
src/navigation/: CMakeLists.txt
src/navigation/test/: CMakeLists.txt  test_box_tracker.cpp  test_position_prediction.cpp
src/object_detection/: CMakeLists.txt
src/robot_memory/: CMakeLists.txt
src/scooping_handler/: CMakeLists.txt
(+216 files in other folders)
